--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -33644,3 +33644,7 @@ html[dir="rtl"] .swiper-testimonial-slider-wrapper .swiper-slide.swiper-slide-vi
     margin-right: 40px;
     box-shadow: 70px 0px 50px 0px rgba(26, 46, 85, 0.1);
 }
+
+/*------------
+*/
+ 
