--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -213,6 +213,61 @@ STYLESHEET INDEXING
 }
 
 /*===========================
+    side bare 
+=============================*/
+.section-buttons {
+    position: fixed;
+    top: 50%;
+    left: -40px;
+    transform: translateY(-50%);
+    z-index: 1000;
+    transition: left 0.5s ease; /* Smooth transition for the left property */
+}
+
+.section-button {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #1ab69d;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    text-align: center;
+    line-height: 28px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.section-buttons:hover .section-button {
+    display: block; /* Show section buttons on hover */
+}
+
+.section-button:hover {
+    background-color: #F0F4F5; /* Change color on hover */
+}
+
+.sidetooltip {
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    left: calc(100% + 10px);
+    transform: translateY(-50%);
+    background-color: #F0F4F5;
+    color: #808080;
+    padding: 5px;
+    border-radius: 3px;
+    white-space: nowrap;
+    font-size: 14px;
+    font-style: var(--font-primary);
+}
+
+.section-button:hover .sidetooltip {
+    visibility: visible;
+}
+
+
+/*===========================
     Loading 
 =============================*/
 .loader-square-47 {
@@ -3088,7 +3143,7 @@ Scroll Down Button Animation
 .popupmodal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 1000; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -3397,7 +3452,7 @@ Scroll Down Button Animation
 
 @media only screen and (max-width: 767px) {
     .edu-breadcrumb-area .course-meta {
-        /*display: block;*/
+        display: block;
         margin-top: 20px;
     }
 }
@@ -3410,7 +3465,7 @@ Scroll Down Button Animation
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
+    display: block;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -3767,6 +3822,7 @@ button.edu-btn {
     overflow: hidden;
     position: relative;
     z-index: 1;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 767px) {
@@ -33869,4 +33925,25 @@ html[dir="rtl"] .swiper-testimonial-slider-wrapper .swiper-slide.swiper-slide-vi
 /* Define the style when hovering over the scrollbar thumb */
 .scroll-container::-webkit-scrollbar-thumb:hover {
     background-color: var(--color-primary); /* Color of the scrollbar thumb on hover */
+}
+
+/* Change scrollbar track color */
+::-webkit-scrollbar {
+    width: 6px; /* Width of the scrollbar */
+}
+
+/* Change scrollbar thumb color */
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-primary); /* Color of the scrollbar thumb */
+    border-radius: 8px; /* Rounded corners for the scrollbar thumb */
+}
+
+/* Change scrollbar track color on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-primary); /* Color of the scrollbar thumb on hover */
+}
+
+/* Change scrollbar track color when active */
+::-webkit-scrollbar-thumb:active {
+    background-color: var(--color-primary); /* Color of the scrollbar thumb when active */
 }
