--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -212,6 +212,89 @@ STYLESHEET INDEXING
     }
 }
 
+   /* drag and drop style */
+
+    .drop-area {
+        width: 400px;
+        height: 240px;
+        border: 2px dashed #ccc;
+        border-radius: 18px;
+        text-align: center;
+        cursor: pointer;
+        position: relative;
+    }
+    .sub-drop-area {
+        border: 2px;
+        text-align: center;
+        position: relative;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .progress-circle {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #1ab69d;
+    border-radius: 50%;
+    vertical-align: middle;
+    align-content: center;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
+    .hidden {
+        display: none;
+    }
+
+
+    .icon {
+        margin-bottom: -23px;
+        color: #aaa;
+        object-fit: contain;
+    }
+
+    .successIcon {
+        padding: 32px;
+        margin-bottom: -25px;
+        color: #aaa;
+        object-fit: contain;
+    }
+
+    #uploadText {
+        color: #666;
+    }
+
+    .success {
+        color: green;
+    }
+
+    .error {
+        color: red;
+    }
+
+    .warning {
+        color: orange;
+    }
+
+    /* table style */
+    .Table-area{
+        border: 2px;
+        text-align: center;
+        position: absolute;
+        background: #fff;
+        display: table;
+        justify-content: center;
+        align-items: center;
+    }
+
 /*===========================
     side bare 
 =============================*/
@@ -5712,7 +5795,7 @@ body.sal-disabled [data-sal|='flip'] {
 
 .about-content .features-list li {
     font-weight: var(--p-medium);
-    font-family: var(--font-secondary);
+    font-family: var(--font-primary);
     color: var(--color-heading);
     padding-left: 35px;
     position: relative;
