--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1976,22 +1976,17 @@ input {
 
 select {
     -webkit-transition: 0.3s;
-    transition: 0.3s;
-    height: 50px;
-    padding: 10px 35px;
+    transition: var(--transition);
+    height: 56px;
+    padding: 0 10px;
     outline: none;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-    border: 0 none;
-    border-radius: 3px;
-    color: var(--color-heading);
-    font-family: var(--font-secondary);
+    border: 1px solid var(--color-border);
+    border-radius: 5px;
+    color: #808080;
     font-size: 15px;
-    font-weight: 600;
-    background: url(../images/icons/arrow-icon.png) 8% center no-repeat transparent;
-    background-color: var(--color-lighten01);
-    min-width: 160px;
     cursor: pointer;
 }
 
@@ -33889,8 +33884,8 @@ html[dir="rtl"] .edu-sorting-area .sorting-right .layout-switcher label {
 }
 
 html[dir="rtl"] select {
-    background: url(../images/icons/arrow-icon.png) 10% center no-repeat;
-    background-color: var(--color-lighten01);
+    background: url(../images/icons/arrow-icon.png) 5% center no-repeat;
+    background-color: var(--color-white);
 }
 
 html[dir="rtl"] .product-details-area .content .product-action .add-to-cart-btn a {
