--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8535,8 +8535,8 @@ body.sal-disabled [data-sal|='flip'] {
 }
 
 .contact-me .thumbnail .thumb {
-    box-shadow: 0px 20px 40px 0px rgba(42, 11, 88, 0.1);
-    border-radius: 50%;
+    /*box-shadow: 0px 20px 40px 0px rgba(42, 11, 88, 0.1);
+    border-radius: 50%;*/
 }
 
 @media only screen and (max-width: 767px) {
@@ -8546,7 +8546,7 @@ body.sal-disabled [data-sal|='flip'] {
 }
 
 .contact-me .thumbnail .thumb img {
-    border-radius: 50%;
+    /*border-radius: 50%;*/
 }
 
 @media only screen and (max-width: 767px) {
@@ -33905,7 +33905,7 @@ html[dir="rtl"] .comment-list-wrapper .comment .thumbnail {
 
 html[dir="rtl"] .contact-me .thumbnail {
     margin-right: inherit;
-    margin-left: 130px;
+    /*margin-left: 130px;*/
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
