--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -212,6 +212,50 @@ STYLESHEET INDEXING
     }
 }
 
+/* news */
+.ticker{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50px;
+    margin: 0 auto;
+    direction: rtl;
+}
+.news{
+    width: 100%;
+    background: #fff;
+    padding: 0 2%
+}
+.title-news{
+    width: 100%;
+    text-align: center;
+    background: var(--color-primary);
+    position: relative
+}
+.title-news:after{
+    position: absolute;
+    content: "";
+    right: -22%;
+    border-left: 20px solid #c81c1c;
+    border-top: 28px solid transparent;
+    border-right: 20px solid transparent;border-bottom: 21px solid transparent;
+    top: 0px
+}
+.title-news h5{
+    font-size: 18px;
+    margin: 8% 0
+}
+.news marquee{
+    font-size: 18px;
+    margin-top: 12px
+}
+.news-content p{
+    margin-right: 20px;
+    margin-left: 20px;
+    display: inline
+}
+
+
    /* drag and drop style */
 
     .drop-area {
