--- a/assets/css/style-rtl.css
+++ b/assets/css/style-rtl.css
@@ -22837,112 +22837,181 @@ display: inline-block;
   -ms-user-select: none; /* For older IE */
 }
 
-#edublink-preloader {
+body{margin-top:20px;}
+.preloader {
   position: fixed;
-  top: 0;
   left: 0;
+  width: 0;
   height: 100%;
   width: 100%;
-  z-index: 99999999999999;
-  overflow: hidden;
-  background-image: -webkit-linear-gradient(70deg, #31b978 0%, #1ab69d 100%);
-  background-image: linear-gradient(20deg, #31b978 0%, #1ab69d 100%);
-  -webkit-transition: all 1.5s ease-out;
-  transition: all 1.5s ease-out;
+  text-align: center;
+  z-index: 9999999;
+  -webkit-transition: .9s;
+  transition: .9s;
 }
 
-#edublink-preloader.loaded .preloader-close-btn-wraper {
-  bottom: 200%;
-}
-
-.preloader-close-btn-wraper {
-  position: fixed;
-  bottom: 0;
+.preloader .loader {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: inline-block;
+  left: 0;
   right: 0;
-  padding: 30px;
-  -webkit-transition: all 1.5s ease-out;
-  transition: all 1.5s ease-out;
+  margin: 0 auto;
+  top: 45%;
+  -webkit-transform: translateY(-45%);
+          transform: translateY(-45%);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
-.preloader-close-btn-wraper .preloader-close-btn {
-  border-radius: 50px;
-  font-size: 13px;
-  padding: 4px 23px;
-  background: var(--color-black);
-  color: var(--color-white);
-  cursor: pointer;
-  height: 45px;
-  line-height: 35px;
-  border: 0;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.loading-spinner {
-  width: 40px;
-  height: 40px;
+.preloader .loader .loader-outter {
   position: absolute;
+  border: 4px solid #ffffff;
+  border-left-color: transparent;
+  border-bottom: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-animation: loader-outter 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+          animation: loader-outter 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+}
+
+.preloader .loader .loader-inner {
+  position: absolute;
+  border: 4px solid #ffffff;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  left: calc(40% - 21px);
+  top: calc(40% - 21px);
+  border-right: 0;
+  border-top-color: transparent;
+  -webkit-animation: loader-inner 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+          animation: loader-inner 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+}
+
+.preloader .loader .indicator {
+  position: absolute;
+  right: 0;
+  left: 0;
   top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translateY(-50%) scale(1.5);
+          transform: translateY(-50%) scale(1.5);
 }
 
-.preloader-spin-1 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #FFFFFF;
-  opacity: 0.6;
+.preloader .loader .indicator svg polyline {
+  fill: none;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.preloader .loader .indicator svg polyline#back {
+  stroke: #ffffff;
+}
+
+.preloader .loader .indicator svg polyline#front {
+  stroke: #1A76D1;
+  stroke-dasharray: 12, 36;
+  stroke-dashoffset: 48;
+  -webkit-animation: dash 1s linear infinite;
+          animation: dash 1s linear infinite;
+}
+
+.preloader::before, .preloader::after {
+  content: '';
   position: absolute;
-  top: 0;
   left: 0;
-  -webkit-animation: edublink-preloader-bounce-animation 2.0s infinite ease-in-out;
-  animation: edublink-preloader-bounce-animation 2.0s infinite ease-in-out;
-}
-
-.preloader-spin-2 {
-  width: 100%;
+  top: 0;
   height: 100%;
-  border-radius: 50%;
-  background-color: #FFFFFF;
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-animation: edublink-preloader-bounce-animation 2.0s infinite ease-in-out;
-  animation: edublink-preloader-bounce-animation 2.0s infinite ease-in-out;
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
+  width: 60%;
+  z-index: -1;
+  background: #1A76D1;
+  -webkit-transition: .9s;
+  transition: .9s;
 }
 
-@-webkit-keyframes edublink-preloader-bounce-animation {
-  0%,
-100% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
-  }
+.preloader::after {
+  left: auto;
+  right: 0;
+}
 
-  50% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
+.preloader.preloader-deactivate {
+  visibility: hidden;
+}
+
+.preloader.preloader-deactivate::after, .preloader.preloader-deactivate::before {
+  width: 0;
+}
+
+.preloader.preloader-deactivate .loader {
+  opacity: 0;
+  visibility: hidden;
+}
+
+@-webkit-keyframes loader-outter {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
-@keyframes edublink-preloader-bounce-animation {
-  0%,
-100% {
-      -webkit-transform: scale(0);
-      transform: scale(0);
+@keyframes loader-outter {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
-
-  50% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
+@-webkit-keyframes loader-inner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+
+@keyframes loader-inner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+
+@-webkit-keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
 
 /*User CSS*/
 /*# sourceMappingURL=style-rtl.css.map */
