--- a/assets/css/style-rtl.css
+++ b/assets/css/style-rtl.css
@@ -23021,7 +23021,7 @@ display: inline-block;
   }
 }
 
- /*****************************
+/*****************************
 *	horizontal news ticker
 ******************************/
 a {
@@ -23033,31 +23033,22 @@ a {
 	display: flex;	
 	position: relative;
 	overflow: hidden;
-	border: 1px solid #1c6547;
+	border: 1px solid #1d3b53;
 }
 
 .ticker-wrapper-h .heading{
-	background-color: #1c6547;
+	background-color: #1d3b53;
 	color: #fff;
 	padding: 5px 10px;
 	flex: 0 0 auto;
 	z-index: 1000;
 }
-.ticker-wrapper-h .heading:after{
-	content: "";
-	position: absolute;
-	top: 0;
-	border-left: 20px solid #1c6547;
-	border-top: 17px solid transparent;
-	border-bottom: 15px solid transparent;
-}
-
 
 .news-ticker-h{
 	display: flex;
 	margin:0;
 	padding: 0;
-	padding-left: 90%;
+	padding-left: 0;
 	z-index: 999;
 	
 	animation-iteration-count: infinite;
@@ -23085,13 +23076,11 @@ a {
 
 @keyframes tic-h {
 	0% {
-		-webkit-transform: translate3d(0, 0, 0);
-		transform: translate3d(0, 0, 0);
+		transform: translate3d(-100%, 0, 0); /* Start off-screen to the left */
 		visibility: visible;
 	}
 	100% {
-		-webkit-transform: translate3d(-100%, 0, 0);
-		transform: translate3d(-100%, 0, 0);
+		transform: translate3d(100%, 0, 0); /* Move off-screen to the right */
 	}
 }
 
